crates/au-cli/tests/it/snapshots/it__scenarios__redundant-abstract-on-sealed.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "redundant-abstract-on-sealed",
      "message": "type-def 'decision' is sealed, which already implies abstract; the explicit `abstract: true` is redundant",
      "severity": "hint",
      "span": {
        "file": "<root>/scenarios/redundant-abstract-on-sealed/type/decision.type.yaml",
        "line_col": {
          "end": {
            "col": 1,
            "line": 6
          },
          "start": {
            "col": 1,
            "line": 1
          }
        },
        "range": {
          "end": 70,
          "start": 0
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": false,
    "count": 1,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 34,
                        "line_col": {
                          "end": {
                            "col": 35,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/redundant-abstract-on-sealed/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "redundant-abstract-on-sealed"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "redundant-abstract-on-sealed"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/redundant-abstract-on-sealed/.arsumbris/repo.yaml",
        "section_presence": null
      }
    ]
  }
}
