crates/au-cli/tests/it/snapshots/it__scenarios__reference-target-type-mismatch.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "reference-target-type-mismatch",
      "message": "field 'support' references 'some-thesis' (claims: thesis) but its `type:` closure does not include 'rationale'",
      "related": [
        {
          "file": "<root>/scenarios/reference-target-type-mismatch/type/evidence.type.yaml",
          "line_col": {
            "end": {
              "col": 22,
              "line": 2
            },
            "start": {
              "col": 12,
              "line": 2
            }
          },
          "range": {
            "end": 29,
            "start": 19
          }
        }
      ],
      "severity": "error",
      "span": {
        "file": "<root>/scenarios/reference-target-type-mismatch/bad-evidence.md",
        "line_col": {
          "end": {
            "col": 27,
            "line": 3
          },
          "start": {
            "col": 10,
            "line": 3
          }
        },
        "range": {
          "end": 45,
          "start": 28
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": false,
    "count": 3,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 36,
                        "line_col": {
                          "end": {
                            "col": 37,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/reference-target-type-mismatch/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "reference-target-type-mismatch"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "reference-target-type-mismatch"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/reference-target-type-mismatch/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 84,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 7
                },
                "start": {
                  "col": 1,
                  "line": 6
                }
              },
              "start": 51
            },
            "text": "Evidence with the wrong target"
          },
          {
            "content": "support",
            "kind": "inline_code",
            "span": {
              "end": 94,
              "line_col": {
                "end": {
                  "col": 10,
                  "line": 8
                },
                "start": {
                  "col": 1,
                  "line": 8
                }
              },
              "start": 85
            }
          },
          {
            "content": "rationale*",
            "kind": "inline_code",
            "span": {
              "end": 119,
              "line_col": {
                "end": {
                  "col": 35,
                  "line": 8
                },
                "start": {
                  "col": 23,
                  "line": 8
                }
              },
              "start": 107
            }
          },
          {
            "content": "type:",
            "kind": "inline_code",
            "span": {
              "end": 144,
              "line_col": {
                "end": {
                  "col": 60,
                  "line": 8
                },
                "start": {
                  "col": 53,
                  "line": 8
                }
              },
              "start": 137
            }
          },
          {
            "content": "rationale",
            "kind": "inline_code",
            "span": {
              "end": 177,
              "line_col": {
                "end": {
                  "col": 93,
                  "line": 8
                },
                "start": {
                  "col": 82,
                  "line": 8
                }
              },
              "start": 166
            }
          },
          {
            "content": "[[some-thesis]]",
            "kind": "inline_code",
            "span": {
              "end": 200,
              "line_col": {
                "end": {
                  "col": 116,
                  "line": 8
                },
                "start": {
                  "col": 99,
                  "line": 8
                }
              },
              "start": 183
            }
          },
          {
            "content": "reference-target-type-mismatch",
            "kind": "inline_code",
            "span": {
              "end": 269,
              "line_col": {
                "end": {
                  "col": 185,
                  "line": 8
                },
                "start": {
                  "col": 153,
                  "line": 8
                }
              },
              "start": 237
            }
          }
        ],
        "claim": [
          "evidence"
        ],
        "closure": [
          "evidence"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "support",
            "origins": [
              {
                "name": "evidence",
                "origin_path": "<root>/scenarios/reference-target-type-mismatch/type/evidence.type.yaml",
                "required": true,
                "shape": "rationale*"
              }
            ],
            "required": true,
            "shape": "rationale*"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 45,
                        "line_col": {
                          "end": {
                            "col": 27,
                            "line": 3
                          },
                          "start": {
                            "col": 10,
                            "line": 3
                          }
                        },
                        "start": 28
                      },
                      "file": "<root>/scenarios/reference-target-type-mismatch/bad-evidence.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "anchor": null,
                      "block_id": null,
                      "kind": "reference",
                      "target": "some-thesis"
                    }
                  }
                ],
                "value": {
                  "anchor": null,
                  "block_id": null,
                  "kind": "reference",
                  "target": "some-thesis"
                }
              }
            ],
            "field": "support"
          }
        ],
        "file": "<root>/scenarios/reference-target-type-mismatch/bad-evidence.md",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 75,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 7
                },
                "start": {
                  "col": 1,
                  "line": 6
                }
              },
              "start": 64
            },
            "text": "A thesis"
          },
          {
            "content": "[thesis]",
            "kind": "inline_code",
            "span": {
              "end": 168,
              "line_col": {
                "end": {
                  "col": 93,
                  "line": 8
                },
                "start": {
                  "col": 83,
                  "line": 8
                }
              },
              "start": 158
            }
          },
          {
            "content": "rationale",
            "kind": "inline_code",
            "span": {
              "end": 204,
              "line_col": {
                "end": {
                  "col": 129,
                  "line": 8
                },
                "start": {
                  "col": 118,
                  "line": 8
                }
              },
              "start": 193
            }
          }
        ],
        "claim": [
          "thesis"
        ],
        "closure": [
          "thesis"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "thesis",
                "origin_path": "<root>/scenarios/reference-target-type-mismatch/type/thesis.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 58,
                        "line_col": {
                          "end": {
                            "col": 42,
                            "line": 3
                          },
                          "start": {
                            "col": 14,
                            "line": 3
                          }
                        },
                        "start": 30
                      },
                      "file": "<root>/scenarios/reference-target-type-mismatch/some-thesis.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "A thesis, not a rationale."
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "A thesis, not a rationale."
                }
              }
            ],
            "field": "description"
          }
        ],
        "file": "<root>/scenarios/reference-target-type-mismatch/some-thesis.md",
        "section_presence": null
      }
    ]
  }
}
