crates/au-cli/tests/it/snapshots/it__scenarios__refinement-bad-shape.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "refinement-bad-shape",
      "message": "field 'bad': a comparison predicate applies to an ordered primitive (Number, Date, DateTime), not 'String'",
      "related": [
        {
          "file": "<root>/scenarios/refinement-bad-shape/type/thing.type.yaml",
          "line_col": {
            "end": {
              "col": 21,
              "line": 2
            },
            "start": {
              "col": 8,
              "line": 2
            }
          },
          "range": {
            "end": 28,
            "start": 15
          }
        }
      ],
      "severity": "error",
      "span": {
        "file": "<root>/scenarios/refinement-bad-shape/thing.md",
        "line_col": {
          "end": {
            "col": 9,
            "line": 3
          },
          "start": {
            "col": 6,
            "line": 3
          }
        },
        "range": {
          "end": 24,
          "start": 21
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 26,
                        "line_col": {
                          "end": {
                            "col": 27,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/refinement-bad-shape/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "refinement-bad-shape"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "refinement-bad-shape"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/refinement-bad-shape/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [],
        "claim": [
          "thing"
        ],
        "closure": [
          "thing"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "bad",
            "origins": [
              {
                "name": "thing",
                "origin_path": "<root>/scenarios/refinement-bad-shape/type/thing.type.yaml",
                "required": true,
                "shape": "String{>=0}"
              }
            ],
            "required": true,
            "shape": "String{>=0}"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 24,
                        "line_col": {
                          "end": {
                            "col": 9,
                            "line": 3
                          },
                          "start": {
                            "col": 6,
                            "line": 3
                          }
                        },
                        "start": 21
                      },
                      "file": "<root>/scenarios/refinement-bad-shape/thing.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "x"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "x"
                }
              }
            ],
            "field": "bad"
          }
        ],
        "file": "<root>/scenarios/refinement-bad-shape/thing.md",
        "section_presence": null
      }
    ]
  }
}
